--- a/index.html
+++ b/index.html
@@ -30,43 +30,6 @@
             return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
         }
 
-
-        // Library code
-
-        // function createStore (reducer) {
-
-        //     // The store should have four parts
-        //     // 1. The state
-        //     // 2. Get the state.
-        //     // 3. Listen to changes on the state.
-        //     // 4. Update the state
-
-        //     let state
-        //     let listeners = []
-
-        //     const getState = () => state
-
-        //     const subscribe = (listener) => {
-        //         listeners.push(listener)
-        //         return () => {
-        //             listeners = listeners.filter((l) => l !== listener)
-        //         }
-        //     }
-
-        //     const dispatch = (action) => {
-        //         state = reducer(state, action)
-        //         listeners.forEach((listener) => listener())
-        //     }
-
-        //     return {
-        //         getState,
-        //         subscribe,
-        //         dispatch,
-        //     }
-        // }
-
-        // App code
-
         const ADD_TODO      = 'ADD_TODO'
         const REMOVE_TODO   = 'REMOVE_TODO'
         const TOGGLE_TODO   = 'TOGGLE_TODO'
@@ -137,23 +100,39 @@
             }
         }
 
-        //Not needed because Redux has this built in
+        const checker = (store) => (next) => (action) => {
+            if (
+                action.type === ADD_TODO &&
+                action.todo.name.toLowerCase().includes('bitcoin')
+            ) {
+                return alert("Nope. That's a bad idea.")
+            }
 
-        // function app (state = {}, action) {
-        //     return {
-        //         todos: todos(state.todos, action),
-        //         goals: goals(state.goals, action),
-        //     }
-        // }
+            if (
+                action.type === ADD_GOAL &&
+                action.goal.name.toLowerCase().includes('bitcoin')
+            ) {
+                return alert("Nope. That's a bad idea.")
+            }
 
-        // const store = Redux.createStore(app)
+            return next(action)
+        }
 
-        // Using Redux to combine reducers
+        const logger = (store) => (next) => (action) => {
+            console.group(action.type)
+                console.log('The action: ', action)
+                const result = next(action)
+                console.log('The new state: ', store.getState())
+            console.groupEnd()
+            return result
+        }
+
+        // Using Redux to create store and combine reducers
 
         const store = Redux.createStore(Redux.combineReducers({
             todos,
             goals,
-        }))
+        }), Redux.applyMiddleware(checker, logger))
 
         store.subscribe(() => {
             const { goals, todos } = store.getState()
