--- a/index.html
+++ b/index.html
@@ -6,21 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Udacity Todos Goals</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
+    <script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
+    <script src="https://unpkg.com/redux-thunk@2.2.0/dist/redux-thunk.min.js"></script>
     <!-- Redux -->
 </head>
 <body>
-    <div>
-        <h1>Todos</h1>
-        <input id="todo" type="text" placeholder="Add Todo">
-        <button id="todoBtn">Add Todo</button>
-        <ul id="todos"></ul>
-    </div>
-    <div>
-        <h1>Goals</h1>
-        <input id="goal" type="text" placeholder="Add Goal">
-        <button id="goalBtn">Add Goal</button>
-        <ul id="goals"></ul>
-    </div>
+    <div id='app'></div>
     
     <script type="text/javascript">
 
@@ -35,6 +29,7 @@
         const TOGGLE_TODO   = 'TOGGLE_TODO'
         const ADD_GOAL      = 'ADD_GOAL'
         const REMOVE_GOAL   = 'REMOVE_GOAL'
+        const RECEIVE_DATA  = 'RECEIVE_DATA'
 
         // Action creators
 
@@ -73,6 +68,88 @@
             }
         }
 
+        function receiveDataAction (todos, goals) {
+            return {
+                type: RECEIVE_DATA,
+                todos,
+                goals,
+            }
+
+        }
+
+        function handleAddTodo (name, cb) {
+            return (dispatch) => {
+                return API.saveTodo(name)
+                    .then((todo) => {
+                        dispatch(addTodoAction(todo))
+                        cb()
+                    })
+                    .catch(() => {
+                        alert('There was an error. Try again.')
+                    })
+            }
+        }
+
+        function handleDeleteTodo (todo) {
+            return (dispatch) => {
+                dispatch(removeTodoAction(todo.id))
+
+                return API.deleteTodo(todo.id)
+                    .catch(() => {
+                    displatch(addTodoAction(todo))
+                        alert('An error occurred. Try again.')
+                    })
+            }
+        }
+
+        function handleToggle (id) {
+            return (dispatch) => {
+                dispatch(toggleTodoAction(id))
+
+                return API.saveTodoToggle(id)
+                    .catch(() => {
+                        dispatch(toggleTodoAction(id))
+                        alert('An error occurred. Try again.')
+                    })
+            }
+        }
+
+        function handleAddGoal (name, cb) {
+            return (dispatch) => {
+                return API.saveGoal(name)
+                    .then((goal) => {
+                        dispatch(addGoalAction(goal))
+                        cb()
+                    })
+                    .catch(() => {
+                        alert('There was an error. Try again.')
+                    })
+            }
+        }
+
+        function handleDeleteGoal (goal) {
+            return (dispatch) => {
+                dispatch(removeGoalAction(goal.id))
+
+                return API.deleteGoal(goal.id)
+                    .catch(() => {
+                        dispatch(addGoalAction(goal))
+                        alert('An error occurred. Try again.')
+                    })
+            }
+        }
+
+        function handleInitialData () {
+            return (dispatch) => {
+                Promise.all([
+                    API.fetchTodos(),
+                    API.fetchGoals()
+                ]).then(([ todos, goals ]) => {
+                    dispatch(receiveDataAction(todos, goals))
+                })
+            }
+        }
+
         // Reducers
 
         function todos (state = [], action) {
@@ -84,6 +161,8 @@
                 case TOGGLE_TODO :
                     return state.map((todo) => todo.id !== action.id ? todo :
                     Object.assign({}, todo, { complete: !todo.complete }))
+                case RECEIVE_DATA :
+                    return action.todos
                 default :
                     return state
             }
@@ -95,7 +174,18 @@
                     return state.concat([action.goal])
                 case REMOVE_GOAL :
                     return state.filter((goal) => goal.id !== action.id)
+                case RECEIVE_DATA :
+                    return action.goals
                 default :
+                    return state
+            }
+        }
+
+        function loading (state= true, action) {
+            switch(action.type) {
+                case RECEIVE_DATA : RECEIVE_DATA
+                    return false
+                default : 
                     return state
             }
         }
@@ -127,94 +217,202 @@
             return result
         }
 
+        const thunk = (store) => (next) => (action) => {
+            if (typeof action === 'function') {
+                return action(store.dispatch)
+            }
+
+            return next(action)
+        }
+
         // Using Redux to create store and combine reducers
 
         const store = Redux.createStore(Redux.combineReducers({
             todos,
             goals,
-        }), Redux.applyMiddleware(checker, logger))
+            loading,
+        }), Redux.applyMiddleware(thunk, checker, logger))
 
-        store.subscribe(() => {
-            const { goals, todos } = store.getState()
+    </script>
 
-            document.getElementById('goals').innerHTML = ''
-            document.getElementById('todos').innerHTML = ''
-
-            goals.forEach(addGoalToDOM)
-            todos.forEach(addTodoToDOM)
-        })
-
-        function addTodo () {
-            const input = document.getElementById ('todo')
-            const name = input.value
-            input.value = ''
-
-            store.dispatch(addTodoAction ({
-                name,
-                complete: false,
-                id: generateId(),
-            }))
+    <script type='text/babel'>
+        function List (props) {
+            return (
+                <ul>
+                    {props.items.map((item) => (
+                        <li key={item.id}>
+                            <span
+                                onClick={() => props.toggle && props.toggle(item.id)}
+                                style={{textDecoration: item.complete ? 'line-through' : 'none'}}>
+                                {item.name}
+                            </span>
+                            <button onClick={() => props.remove(item)}>
+                                X
+                            </button>
+                        </li>
+                    ))}
+                </ul>
+            )
         }
 
-        function addGoal () {
-            const input = document.getElementById ('goal')
-            const name = input.value
-            input.value = ''
+        class Todos extends React.Component {
+            addItem = (e) => {
+                e.preventDefault()
 
-            store.dispatch(addGoalAction({
-                id: generateId(),
-                name,
-            }))
+                this.props.dispatch(handleAddTodo(
+                    this.input.value,
+                    () => this.input.value = ''
+                ))
+            }
+
+            removeItem = (todo) => {
+                this.props.dispatch(handleDeleteTodo(todo))
+            }
+
+            toggleItem = (id) => {
+                this.props.dispatch(handleToggle(id))
+            }
+
+            render() {
+                return (
+                    <div>
+                        <h1>Todo List</h1>
+                        <input
+                            type='text'
+                            placeholder='Add Todo'
+                            ref={(input) => this.input = input}
+                        />
+                        <button onClick={this.addItem}>Add Todo</button>
+
+                        <List
+                            toggle={this.toggleItem} 
+                            items={this.props.todos}
+                            remove={this.removeItem} 
+                        />
+                    </div>
+                )
+            }
         }
 
-        document.getElementById('todoBtn')
-            .addEventListener('click', addTodo)
-        
-        document.getElementById('goalBtn')
-            .addEventListener('click', addGoal)
+        const ConnectedTodos = connect((state) => ({
+            todos: state.todos
+        }))(Todos)
 
-        function createRemoveButton (onClick) {
-            const removeBtn = document.createElement('button')
-            removeBtn.innerHTML = 'X'
-            removeBtn.addEventListener('click', onClick)
-            return removeBtn
+        class Goals extends React.Component {
+            addItem = (e) => {
+                e.preventDefault()
+                this.props.dispatch(handleAddGoal(
+                    this.input.value,
+                    () => this.input.value = ''
+                ))
+            }
+
+            removeItem = (goal) => {
+                this.props.dispatch(handleDeleteGoal(goal))
+            }
+
+            render() {
+                return (
+                    <div>
+                        <h1>Goal List</h1>
+                        <input
+                            type='text'
+                            placeholder='Add Goal'
+                            ref={(input) => this.input = input}
+                        />
+                        <button onClick={this.addItem}>Add Goal</button>
+
+                        <List 
+                            items={this.props.goals}
+                            remove={this.removeItem}
+                        />
+                    </div>
+                )
+            }
         }
 
-        function addTodoToDOM (todo) {
-            const node = document.createElement('li')
-            const text = document.createTextNode(todo.name)
+        const ConnectedGoals = connect((state) => ({
+            goals: state.goals
+        }))(Goals)
 
-            const removeBtn = createRemoveButton(() => {
-                store.dispatch(removeTodoAction(todo.id))
-            })
+        class App extends React.Component {
+            componentDidMount () {
+                const { dispatch } = this.props
 
-            node.appendChild(text)
-            node.appendChild(removeBtn)
+                dispatch(handleInitialData())
+            }
+            render() {
+                if (this.props.loading === true) {
+                    return <h3>Loading</h3>
+                }
 
-            node.style.textDecoration = todo.complete ? 'line-through' : 'none'
-            node.addEventListener('click', () => {
-                store.dispatch(toggleTodoAction(todo.id))
-            })
-
-            document.getElementById('todos')
-                .appendChild(node)
+                return (
+                    <div>
+                        <ConnectedTodos />
+                        <ConnectedGoals />
+                    </div>
+                )
+            }
         }
 
-        function addGoalToDOM (goal) {
-            const node = document.createElement('li')
-            const text = document.createTextNode(goal.name)
+        const ConnectedApp = connect((state) => ({
+            loading: state.loading
+        }))(App)
 
-            const removeBtn = createRemoveButton(() => {
-                store.dispatch(removeGoalAction(goal.id))
-            })
+        const Context = React.createContext()
 
-            node.appendChild(text)
-            node.appendChild(removeBtn)
+        function connect (mapStateToProps) {
+            return (Component) => {
+                class Receiver extends React.Component {
+                    componentDidMount () {
+                        const { subscribe } = this.props.store
 
-            document.getElementById('goals')
-                .appendChild(node)
+                        this.unsubscribe = subscribe(() => {
+                            this.forceUpdate()
+                        })
+                    }
+                    componentWillUnmount () {
+                        this.unsubscribe()
+                    }
+                    render() {
+                        const { dispatch, getState } = this.props.store
+                        const state = getState()
+                        const stateNeeded = mapStateToProps(state)
+
+                        return <Component {...stateNeeded} dispatch={dispatch} />
+                    }
+                }
+
+                class ConnectedComponent extends React.Component {
+                    render() {
+                        return (
+                            <Context.Consumer>
+                                {(store) => <Receiver store={store} />}
+                            </Context.Consumer>
+                        )
+                    }
+                }
+
+                return ConnectedComponent
+            }
         }
 
+        class Provider extends React.Component {
+            render () {
+                return (
+                    <Context.Provider value={this.props.store}>
+                        {this.props.children}
+                    </Context.Provider>
+                )
+            }
+        }
+
+        ReactDOM.render(
+            <Provider store={store}>
+                <ConnectedApp />
+            </Provider>,
+            document.getElementById('app')  
+        )
     </script>
 </body>
 </html>
